--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 djoser==2.1.0
-django-extensions==3.1.5
+django-extensions
 drf-spectacular==0.22.1
 django-filter==22.1
